<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_cadastra_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.fiap.notas.CadastraLoginActivity">

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtSobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/sobrenome"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <RadioGroup
            android:id="@+id/rgSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feminino" />

            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculino" />

        </RadioGroup>

        <EditText
            android:id="@+id/edtDataNascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/data_de_nascimento"
            android:inputType="date"
            android:maxLines="1" />


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/edtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnGravarChaves"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/gravar_dados"
            android:onClick="gravarChaves"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnExcluirChaves"
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/excluir_dados"
                android:onClick="excluirChaves"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCarregarChaves"
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/carregar_dados"
                android:onClick="carregarChaves"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnVerificarChaves"
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/verificar_dados"
                android:onClick="verificarChaves"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGravarArquivo"
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/gravar_arquivo"
                android:onClick="gravarArquivo"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnLerArquivo"
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:onClick="lerArquivo"
                android:text="@string/ler_arquivo"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnExcluirArquivo"
                style="@style/AppTheme.ButtonPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/excluir_arquivo"
                android:onClick="excluirArquivo"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnRetornar"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/fechar_e_retornar"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>

